feat: restrict public share photos
